# simple-language-to-instruction-compiler

./: README.md
cas-two-phase/: .gitignore  CMakeLists.txt  xmake.lua
doc/: literature.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.out  main.tex  main.toc
doc/chapters/fazit/: Ergebnisse.tex
doc/chapters/theorie/: Compiler-Uebersicht.tex  ParserEbnf.tex  RiscBackend.tex  TopDownCompiler.tex  ZweipassCompiler.tex  (+1 more)
slicc/: .gitignore  CMakeLists.txt  Readme.md  compile_commands.json  input.pc
slicc/.xmake/macosx/arm64/cache/: config  toolchain
slicc/examples/: input.slang  simple-if.risc  simple-if.slang
slicc/nix-dev/: flake.nix
slicc/src/: CMakeLists.txt  main.cc  main.cpp  tac.hh
slicc/src/parser_gen/: CMakeLists.txt  driver.cc  driver.hh  location.hh  parse.yy  parser.cc  parser.hh  scan.ll  scanner.cc  scanner.hh
slicc/src/risc_gen/: CMakeLists.txt  code_generator.cc  code_generator.hh  driver.cc  driver.hh  location.hh  pretty_code_generator.cc  pretty_code_generator.hh  riscv_types.hh  strdup.hh
slicc/src/slang_parser/: CMakeLists.txt  driver.cc  driver.hh  location.hh  parse.yy  parser.cc  parser.hh  parser_helper.cc  parser_helper.hh  parser_types.hh  pretty_parser.cc  pretty_parser.hh  scan.ll  scanner.cc  scanner.hh  strdup.cc  strdup.hh
thesis/: .gitignore  .gitlab-ci.yml  Hauptdokument.out.ps  Hauptdokument.tex  LICENSE  README.md  abkuerzungsverzeichnis.tex  deckblatt.tex  deckblatt_neu.tex  erklaerung.tex  literature.bib  todonotes.sty
thesis/Anhang/: Anhang.tex
thesis/Meta/: commands.tex  header.tex
(+23 files in other folders)
